запросы в localStorage через redux-saga. написал faker для наглядности. статус текущей задачи

--- a/src/index.css
+++ b/src/index.css
@@ -8,20 +8,6 @@
   font-size: 14px;
 }
 
-.btn {
-  /*
-  display: block;
-  background-color: white;
-  border: 0;
-  box-shadow: #d8d8d8 0px 2px 5px 2px;
-  color: #3249c7;
-  font-weight: bold;
-  border-radius: 3px;
-  padding: 0;
-  margin: 0.5em auto;
-  cursor: pointer;*/
-}
-
 section {
   text-align: center;
   padding: 3em 0;
@@ -42,7 +28,7 @@ table thead tr {
   border-bottom: 1px #e0e0e0 solid;
 }
 table tbody tr{
-  background-color: #e9f6ff;
+  /*background-color: #e9f6ff;*/
 }
 table td,
 table th {
